与上一次的金额比较，决定是否可以过皮

--- a/weight/design.ini
+++ b/weight/design.ini
@@ -1,201 +1,40 @@
 [formDesign]
-no=0
-glideNo=1
-car=1
-weightType=0
-faHuo=1
-shouHuo=1
-goods=1
-spec=1
-gross=1
-tare=1
-net=1
-bundle=0
-real=0
-price=0
-sum=0
-scale=0
-quanter=0
-cost=0
-grossMan=0
-tareMan=0
-grossAddr=0
-tareAddr=0
-grossTime=1
-tareTime=1
-firstTime=0
-secondTime=0
-updateUser=0
-updateTime=0
-remark=1
-printCount=0
-upload=0
-backup1=0
-backup2=0
-backup3=0
-backup4=0
-backup5=0
-backup6=0
-backup7=0
-backup8=0
-backup9=0
-backup10=0
-backup11=0
-backup12=0
-backup13=0
-backup14=0
-backup15=0
-backup16=0
-backup17=0
-backup18=0
-noCaption=序号
-glideNoCaption=流水号
-carCaption=车号
-weightTypeCaption=过磅类型
-faHuoCaption=发货单位
+carCaption=车  号
+faHuoCaption=售粮人
 shouHuoCaption=收货单位
-goodsCaption=货名
-specCaption=规格
-grossCaption=毛重
-tareCaption=皮重
-netCaption=净重
-bundleCaption=扣重
-realCaption=实重
-priceCaption=单价
-sumCaption=金额
+goodsCaption=品  种
+specCaption=等  级
+grossCaption=毛  重
+tareCaption=皮  重
+netCaption=净  重
+bundleCaption=扣  杂
+realCaption=实  重
+priceCaption=单  价
+sumCaption=金  额
 scaleCaption=折方系数
-quanterCaption=方量
+quanterCaption=折方量
 costCaption=过磅费
-grossManCaption=毛重司磅员
-tareManCaption=皮重司磅员
-grossAddrCaption=毛重磅号
-tareAddrCaption=皮重磅号
 grossTimeCaption=毛重时间
 tareTimeCaption=皮重时间
-firstTimeCaption=一次过磅时间
-secondTimeCaption=二次过磅时间
-updateUserCaption=更新人
-updateTimeCaption=更新时间
 remarkCaption=备  注
-printCountCaption=打印次数
-uploadCaption=上传否
-backup1Caption=备用1
-backup2Caption=备用2
-backup3Caption=备用3
-backup4Caption=备用4
-backup5Caption=备用5
-backup6Caption=备用6
-backup7Caption=备用7
-backup8Caption=备用8
-backup9Caption=备用9
-backup10Caption=备用10
-backup11Caption=备用11
+backup1Caption=姓  名
+backup2Caption=身份证号
+backup3Caption=电  话
+backup4Caption=车  种
+backup5Caption=水  份
+backup6Caption=麻袋数
+backup7Caption=纺织袋数
+backup8Caption=散织袋数
+backup9Caption=扣水量
+backup10Caption=杂  质
+backup11Caption=色泽气味
 backup12Caption=备用12
 backup13Caption=备用13
 backup14Caption=备用14
-backup15Caption=备用15
-backup16Caption=备用16
+backup15Caption=扣后净重
+backup16Caption=实付金额
 backup17Caption=备用17
 backup18Caption=备用18
-noIndex=0
-glideNoIndex=1
-carIndex=2
-weightTypeIndex=3
-faHuoIndex=4
-shouHuoIndex=5
-goodsIndex=6
-specIndex=7
-grossIndex=8
-tareIndex=9
-netIndex=10
-bundleIndex=11
-realIndex=12
-priceIndex=13
-sumIndex=14
-scaleIndex=15
-quanterIndex=16
-costIndex=17
-grossManIndex=18
-tareManIndex=19
-grossAddrIndex=20
-tareAddrIndex=21
-grossTimeIndex=22
-tareTimeIndex=23
-firstTimeIndex=24
-secondTimeIndex=25
-updateUserIndex=26
-updateTimeIndex=27
-remarkIndex=28
-printCountIndex=29
-uploadIndex=30
-backup1Index=31
-backup2Index=32
-backup3Index=33
-backup4Index=34
-backup5Index=35
-backup6Index=36
-backup7Index=37
-backup8Index=38
-backup9Index=39
-backup10Index=40
-backup11Index=41
-backup12Index=42
-backup13Index=43
-backup14Index=44
-backup15Index=45
-backup16Index=46
-backup17Index=47
-backup18Index=48
-noWidth=100
-glideNoWidth=128
-carWidth=100
-weightTypeWidth=100
-faHuoWidth=100
-shouHuoWidth=100
-goodsWidth=100
-specWidth=100
-grossWidth=100
-tareWidth=100
-netWidth=100
-bundleWidth=100
-realWidth=100
-priceWidth=100
-sumWidth=100
-scaleWidth=100
-quanterWidth=100
-costWidth=100
-grossManWidth=100
-tareManWidth=100
-grossAddrWidth=100
-tareAddrWidth=100
-grossTimeWidth=100
-tareTimeWidth=100
-firstTimeWidth=100
-secondTimeWidth=100
-updateUserWidth=100
-updateTimeWidth=100
-remarkWidth=100
-printCountWidth=100
-uploadWidth=100
-backup1Width=100
-backup2Width=100
-backup3Width=100
-backup4Width=100
-backup5Width=100
-backup6Width=100
-backup7Width=100
-backup8Width=100
-backup9Width=100
-backup10Width=100
-backup11Width=100
-backup12Width=100
-backup13Width=100
-backup14Width=100
-backup15Width=100
-backup16Width=100
-backup17Width=100
-backup18Width=100
-memoCaption=备  注
 carDefault=
 faHuoDefault=
 shouHuoDefault=
@@ -277,6 +116,199 @@ mustBackup15=0
 mustBackup16=0
 mustBackup17=0
 mustBackup18=0
+useExpression6=0
+expression6=[毛重]*2
+useExpression7=0
+expression7=[空重]*2
+useExpression8=0
+expression8=[净重]*2
+useExpression9=0
+expression9=[金额]*2
+point6=0
+point7=0
+point8=0
+point9=0
+min6=0
+min7=0
+min8=0
+min9=0
+useExpression15=1
+expression15=[实重]-[备用9]
+useExpression16=1
+expression16=[单价]*[备用15]
+useExpression17=0
+expression17=[净重]*2
+useExpression18=0
+expression18=[金额]*2
+point15=2
+point16=2
+point17=0
+point18=0
+min15=0
+min16=0
+min17=0
+min18=0
+no=0
+glideNo=1
+car=1
+weightType=0
+faHuo=1
+shouHuo=1
+goods=1
+spec=1
+gross=1
+tare=1
+net=1
+bundle=0
+real=0
+price=1
+sum=1
+scale=0
+quanter=0
+cost=0
+grossMan=0
+tareMan=0
+grossAddr=0
+tareAddr=0
+grossTime=1
+tareTime=1
+firstTime=0
+secondTime=0
+updateUser=0
+updateTime=0
+remark=1
+printCount=0
+upload=0
+backup1=0
+backup2=0
+backup3=0
+backup4=0
+backup5=0
+backup6=0
+backup7=0
+backup8=0
+backup9=0
+backup10=0
+backup11=0
+backup12=0
+backup13=0
+backup14=0
+backup15=0
+backup16=0
+backup17=0
+backup18=1
+noCaption=序号
+glideNoCaption=流水号
+weightTypeCaption=过磅类型
+grossManCaption=毛重司磅员
+tareManCaption=皮重司磅员
+grossAddrCaption=毛重磅号
+tareAddrCaption=皮重磅号
+firstTimeCaption=一次过磅时间
+secondTimeCaption=二次过磅时间
+updateUserCaption=更新人
+updateTimeCaption=更新时间
+printCountCaption=打印次数
+uploadCaption=上传否
+noIndex=0
+glideNoIndex=1
+carIndex=2
+weightTypeIndex=3
+faHuoIndex=4
+shouHuoIndex=5
+goodsIndex=6
+specIndex=7
+grossIndex=8
+tareIndex=9
+netIndex=10
+bundleIndex=11
+realIndex=12
+priceIndex=13
+sumIndex=14
+scaleIndex=15
+quanterIndex=16
+costIndex=17
+grossManIndex=18
+tareManIndex=19
+grossAddrIndex=20
+tareAddrIndex=21
+grossTimeIndex=23
+tareTimeIndex=24
+firstTimeIndex=25
+secondTimeIndex=26
+updateUserIndex=27
+updateTimeIndex=28
+remarkIndex=29
+printCountIndex=30
+uploadIndex=31
+backup1Index=32
+backup2Index=33
+backup3Index=34
+backup4Index=35
+backup5Index=36
+backup6Index=37
+backup7Index=38
+backup8Index=39
+backup9Index=40
+backup10Index=41
+backup11Index=42
+backup12Index=43
+backup13Index=44
+backup14Index=45
+backup15Index=46
+backup16Index=47
+backup17Index=48
+backup18Index=22
+noWidth=100
+glideNoWidth=109
+carWidth=51
+weightTypeWidth=100
+faHuoWidth=85
+shouHuoWidth=69
+goodsWidth=69
+specWidth=51
+grossWidth=51
+tareWidth=51
+netWidth=51
+bundleWidth=100
+realWidth=100
+priceWidth=51
+sumWidth=51
+scaleWidth=100
+quanterWidth=100
+costWidth=100
+grossManWidth=100
+tareManWidth=100
+grossAddrWidth=100
+tareAddrWidth=100
+grossTimeWidth=157
+tareTimeWidth=100
+firstTimeWidth=100
+secondTimeWidth=100
+updateUserWidth=100
+updateTimeWidth=100
+remarkWidth=100
+printCountWidth=100
+uploadWidth=100
+backup1Width=100
+backup2Width=100
+backup3Width=100
+backup4Width=100
+backup5Width=100
+backup6Width=100
+backup7Width=100
+backup8Width=100
+backup9Width=100
+backup10Width=100
+backup11Width=100
+backup12Width=100
+backup13Width=100
+backup14Width=100
+backup15Width=100
+backup16Width=100
+backup17Width=100
+backup18Width=53
+memoCaption=备  注
 mustGross=0
 mustTare=0
 mustNet=0
@@ -284,30 +316,6 @@ mustReal=0
 mustSum=0
 mustCost=0
 mustQuanter=0
-useExpression6=0
-useExpression7=0
-useExpression8=1
-useExpression9=0
-useExpression15=0
-useExpression16=0
-useExpression17=0
-useExpression18=0
-expression6=
-expression7=
-expression8=[实重]-[备用6]-[备用7]*[实重]
-expression9=
-expression15=
-expression16=
-expression17=
-expression18=
-point6=0
-point7=0
-point8=0
-point9=0
-point15=0
-point16=0
-point17=0
-point18=0
 divide6=1
 divide7=1
 divide8=1
@@ -324,14 +332,6 @@ sumType15=1
 sumType16=1
 sumType17=1
 sumType18=1
-min6=0
-min7=0
-min8=0
-min9=0
-min15=0
-min16=0
-min17=0
-min18=0
 rule6=0
 rule62=0
 rule7=0
@@ -413,29 +413,29 @@ NotChangeBackup18=0
 [position]
 cb00=车号
 cb01=发货单位
-cb02=收货单位
-cb03=货名
-cb04=规格
-cb05=备注
-cb06=毛重
-cb07=皮重
-cb08=净重
-cb10=备用6
-cb11=备用7
-cb12=备用8
-cb13=
-cb14=
-cb15=
-cb16=
-cb17=
+cb02=备用1
+cb03=备用2
+cb04=备用3
+cb05=备用6
+cb06=备用7
+cb07=备用8
+cb08=备用4
+cb10=货名
+cb11=规格
+cb12=备用5
+cb13=备用10
+cb14=备用11
+cb15=扣重
+cb16=备用9
+cb17=单价
 cb18=
-cb20=
-cb21=
-cb22=
-cb23=
-cb24=
-cb25=
-cb26=
+cb20=毛重
+cb21=皮重
+cb22=净重
+cb23=实重
+cb24=金额
+cb25=备用15
+cb26=备用16
 cb27=
 cb28=
 cb30=
