--- a/weight/menu.ini
+++ b/weight/menu.ini
@@ -14,19 +14,19 @@ visible=1
 caption=帮助(&V)
 visible=1
 [user_change]
-caption=切换用户
+caption=切换用户(&V)
 visible=1
 [change_password]
-caption=更改密码
+caption=更改密码(&W)
 visible=1
 [weight]
-caption=称重操作
+caption=称重操作(&X)
 visible=1
 [close]
-caption=关闭软件
+caption=关闭软件(&Y)
 visible=1
 [terminate]
-caption=关闭计算机
+caption=关闭计算机(&Z)
 visible=1
 [user]
 caption=操作员维护(&L)
