--- a/weight/setup.ini
+++ b/weight/setup.ini
@@ -1,18 +1,18 @@
 [system_set]
 add_print_form=1
 weight_type=0
-weight_mode=2
+weight_mode=1
 auto_mode=0
 record_time=0
 record_type=2
 show_meter2=0
-previewTicket=0
+previewTicket=1
 staticReportTitle=统计报表
 report_index=0
-poTicketFormat=Ticket\山东磅单1.fr3
-soTicketFormat=Ticket\山东磅单1.fr3
-ioTicketFormat=Ticket\山东磅单1.fr3
-ooTicketFormat=Ticket\山东磅单1.fr3
+poTicketFormat=Ticket\双盛粮食.fr3
+soTicketFormat=Ticket\双盛粮食.fr3
+ioTicketFormat=Ticket\双盛粮食.fr3
+ooTicketFormat=Ticket\双盛粮食.fr3
 company=
 tel=
 printer1=Default
@@ -20,7 +20,7 @@ printer2=Default
 addr=A
 ticket_type=1
 use_standard=1
-use_simple=0
+use_simple=1
 use_once=1
 autoDropDown=0
 enterAsTab=1
@@ -36,8 +36,8 @@ useCode=0
 allowNotSteady=0
 useVoice=0
 selectTicketBeforePrint=0
-useTareDiff=1
-pay=0
+useTareDiff=0
+pay=1
 savePicLocal=0
 useLastTare=0
 auto_save_prepare=1
@@ -51,7 +51,7 @@ auto_refresh=0
 weight_one_click=0
 show_total=1
 disconnect_to_zero=0
-record_left=0
+record_left=1
 use_out_glide_no=0
 use_filter_form=0
 show_print_dialog=0
@@ -94,7 +94,7 @@ print_net=0
 complete_hint=取重完成请下称
 car_out_hint=车辆已下秤
 pic_count=2000
-pic_path=E:\工作\福州奥特威\标准版称重软件\weight2015.3\weight\\WeightImg\
+pic_path=F:\FZATW\标准版称重软件\weight2015.3\weight\WeightImg\
 simple_mode=0
 auto_refresh_interval=60
 disconnect_check_count=10
@@ -119,4 +119,5 @@ pay_type=0
 auto_login=0
 login_name=
 login_pass=eJwDAAAAAAE=
-not_allow_tare_exceed=1
+not_allow_tare_exceed=0
+compare_last=1
