upload to cloud

--- a/weight/design.ini
+++ b/weight/design.ini
@@ -1,38 +1,38 @@
 [formDesign]
 carCaption=车  号
-faHuoCaption=售粮人
+faHuoCaption=发货单位
 shouHuoCaption=收货单位
-goodsCaption=品  种
-specCaption=等  级
+goodsCaption=货  名
+specCaption=规  格
 grossCaption=毛  重
 tareCaption=皮  重
 netCaption=净  重
-bundleCaption=扣  杂
+bundleCaption=扣  重
 realCaption=实  重
 priceCaption=单  价
 sumCaption=金  额
 scaleCaption=折方系数
-quanterCaption=折方量
+quanterCaption=方  量
 costCaption=过磅费
 grossTimeCaption=毛重时间
 tareTimeCaption=皮重时间
 remarkCaption=备  注
-backup1Caption=姓  名
-backup2Caption=身份证号
-backup3Caption=电  话
-backup4Caption=车  种
-backup5Caption=水  份
-backup6Caption=麻袋数
-backup7Caption=纺织袋数
-backup8Caption=散织袋数
-backup9Caption=扣水量
-backup10Caption=杂  质
-backup11Caption=色泽气味
+backup1Caption=备用1
+backup2Caption=备用2
+backup3Caption=备用3
+backup4Caption=备用4
+backup5Caption=备用5
+backup6Caption=备用6
+backup7Caption=备用7
+backup8Caption=备用8
+backup9Caption=备用9
+backup10Caption=备用10
+backup11Caption=备用11
 backup12Caption=备用12
 backup13Caption=备用13
 backup14Caption=备用14
-backup15Caption=扣后净重
-backup16Caption=实付金额
+backup15Caption=备用15
+backup16Caption=备用16
 backup17Caption=备用17
 backup18Caption=备用18
 carDefault=
@@ -89,6 +89,38 @@ clearBackup15=1
 clearBackup16=1
 clearBackup17=1
 clearBackup18=1
+useExpression6=0
+expression6=[毛重]*2
+useExpression7=0
+expression7=[空重]*2
+useExpression8=0
+expression8=[净重]*2
+useExpression9=0
+expression9=[金额]*2
+point6=0
+point7=0
+point8=0
+point9=0
+min6=0
+min7=0
+min8=0
+min9=0
+useExpression15=0
+expression15=[毛重]*2
+useExpression16=0
+expression16=[空重]*2
+useExpression17=0
+expression17=[净重]*2
+useExpression18=0
+expression18=[金额]*2
+point15=0
+point16=0
+point17=0
+point18=0
+min15=0
+min16=0
+min17=0
+min18=0
 mustCar=1
 mustFaHuo=0
 mustShouHuo=0
@@ -116,38 +148,13 @@ mustBackup15=0
 mustBackup16=0
 mustBackup17=0
 mustBackup18=0
-useExpression6=0
-expression6=[毛重]*2
-useExpression7=0
-expression7=[空重]*2
-useExpression8=0
-expression8=[净重]*2
-useExpression9=0
-expression9=[金额]*2
-point6=0
-point7=0
-point8=0
-point9=0
-min6=0
-min7=0
-min8=0
-min9=0
-useExpression15=1
-expression15=[实重]-[备用9]
-useExpression16=1
-expression16=[单价]*[备用15]
-useExpression17=0
-expression17=[净重]*2
-useExpression18=0
-expression18=[金额]*2
-point15=2
-point16=2
-point17=0
-point18=0
-min15=0
-min16=0
-min17=0
-min18=0
+mustGross=0
+mustTare=0
+mustNet=0
+mustReal=0
+mustSum=0
+mustCost=0
+mustQuanter=0
 no=0
 glideNo=1
 car=1
@@ -308,134 +315,32 @@ backup15Width=100
 backup16Width=100
 backup17Width=100
 backup18Width=53
-memoCaption=备  注
-mustGross=0
-mustTare=0
-mustNet=0
-mustReal=0
-mustSum=0
-mustCost=0
-mustQuanter=0
-divide6=1
-divide7=1
-divide8=1
-divide9=1
-divide15=1
-divide16=1
-divide17=1
-divide18=1
-sumType6=1
-sumType7=1
-sumType8=1
-sumType9=1
-sumType15=1
-sumType16=1
-sumType17=1
-sumType18=1
-rule6=0
-rule62=0
-rule7=0
-rule72=0
-rule8=0
-rule82=0
-rule9=0
-rule92=0
-rule15=0
-rule152=0
-rule16=0
-rule162=0
-rule17=0
-rule172=0
-rule18=0
-rule182=0
-group6=0
-group7=0
-group8=0
-group9=0
-group15=0
-group16=0
-group17=0
-group18=0
-UniqueCar=0
-UniqueFaHuo=0
-UniqueShouHuo=0
-UniqueGoods=0
-UniqueSpec=0
-UniqueBundle=0
-UniquePrice=0
-UniqueScale=0
-UniqueMemo=0
-UniqueBackup1=0
-UniqueBackup2=0
-UniqueBackup3=0
-UniqueBackup4=0
-UniqueBackup5=0
-UniqueBackup6=0
-UniqueBackup7=0
-UniqueBackup8=0
-UniqueBackup9=0
-UniqueBackup10=0
-UniqueBackup11=0
-UniqueBackup12=0
-UniqueBackup13=0
-UniqueBackup14=0
-UniqueBackup15=0
-UniqueBackup16=0
-UniqueBackup17=0
-UniqueBackup18=0
-NotChangeCar=1
-NotChangeFaHuo=0
-NotChangeShouHuo=0
-NotChangeGoods=0
-NotChangeSpec=0
-NotChangeBundle=0
-NotChangePrice=0
-NotChangeScale=0
-NotChangeMemo=0
-NotChangeBackup1=0
-NotChangeBackup2=0
-NotChangeBackup3=0
-NotChangeBackup4=0
-NotChangeBackup5=0
-NotChangeBackup6=0
-NotChangeBackup7=0
-NotChangeBackup8=0
-NotChangeBackup9=0
-NotChangeBackup10=0
-NotChangeBackup11=0
-NotChangeBackup12=0
-NotChangeBackup13=0
-NotChangeBackup14=0
-NotChangeBackup15=0
-NotChangeBackup16=0
-NotChangeBackup17=0
-NotChangeBackup18=0
 [position]
 cb00=车号
 cb01=发货单位
-cb02=备用1
-cb03=备用2
-cb04=备用3
-cb05=备用6
-cb06=备用7
-cb07=备用8
-cb08=备用4
-cb10=货名
-cb11=规格
-cb12=备用5
-cb13=备用10
-cb14=备用11
-cb15=扣重
-cb16=备用9
-cb17=单价
+cb02=收货单位
+cb03=货名
+cb04=规格
+cb05=扣重
+cb06=单价
+cb07=
+cb08=
+cb10=毛重
+cb11=皮重
+cb12=净重
+cb13=实重
+cb14=金额
+cb15=
+cb16=
+cb17=
 cb18=
-cb20=毛重
-cb21=皮重
-cb22=净重
-cb23=实重
-cb24=金额
-cb25=备用15
-cb26=备用16
+cb20=
+cb21=
+cb22=
+cb23=
+cb24=
+cb25=
+cb26=
 cb27=
 cb28=
 cb30=
