--- a/weight/setup.ini
+++ b/weight/setup.ini
@@ -1,7 +1,7 @@
 [system_set]
 add_print_form=1
 weight_type=0
-weight_mode=1
+weight_mode=2
 auto_mode=0
 record_time=0
 record_type=2
@@ -33,7 +33,7 @@ waitForZero=0
 useBundleRate=0
 autoWriteTare=0
 useCode=0
-allowNotSteady=0
+allowNotSteady=1
 useVoice=0
 selectTicketBeforePrint=0
 useTareDiff=0
@@ -121,3 +121,9 @@ login_name=
 login_pass=eJwDAAAAAAE=
 not_allow_tare_exceed=0
 compare_last=1
+[static]
+project=5
+topCount=10
+sum=1
+queue=1
+chartType=0
