--- a/dataUploadCloud/dataUploadCloud.cfg
+++ b/dataUploadCloud/dataUploadCloud.cfg
@@ -34,6 +34,10 @@
 -K$00400000
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
+-U";C:\delphiControls\teechart.v8.01.FullSource\Sources\Compiled\Delphi7\Lib"
+-O";C:\delphiControls\teechart.v8.01.FullSource\Sources\Compiled\Delphi7\Lib"
+-I";C:\delphiControls\teechart.v8.01.FullSource\Sources\Compiled\Delphi7\Lib"
+-R";C:\delphiControls\teechart.v8.01.FullSource\Sources\Compiled\Delphi7\Lib"
 -DEUREKALOG;EUREKALOG_VER6
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
