--- a/weight/design.ini
+++ b/weight/design.ini
@@ -1,6 +1,6 @@
 [formDesign]
 carCaption=车  号
-faHuoCaption=发货单位
+faHuoCaption=施工部位
 shouHuoCaption=收货单位
 goodsCaption=货  名
 specCaption=规  格
@@ -89,8 +89,8 @@ clearBackup15=1
 clearBackup16=1
 clearBackup17=1
 clearBackup18=1
-useExpression6=0
-expression6=[毛重]*2
+useExpression6=1
+expression6=
 useExpression7=0
 expression7=[空重]*2
 useExpression8=0
@@ -315,6 +315,101 @@ backup15Width=100
 backup16Width=100
 backup17Width=100
 backup18Width=53
+memoCaption=备  注
+divide6=1
+divide7=1
+divide8=1
+divide9=1
+divide15=1
+divide16=1
+divide17=1
+divide18=1
+sumType6=1
+sumType7=1
+sumType8=1
+sumType9=1
+sumType15=1
+sumType16=1
+sumType17=1
+sumType18=1
+rule6=14
+rule62=16
+rule7=0
+rule72=0
+rule8=0
+rule82=0
+rule9=0
+rule92=0
+rule15=0
+rule152=0
+rule16=0
+rule162=0
+rule17=0
+rule172=0
+rule18=0
+rule182=0
+group6=1
+group7=0
+group8=0
+group9=0
+group15=0
+group16=0
+group17=0
+group18=0
+UniqueCar=0
+UniqueFaHuo=0
+UniqueShouHuo=0
+UniqueGoods=0
+UniqueSpec=0
+UniqueBundle=0
+UniquePrice=0
+UniqueScale=0
+UniqueMemo=0
+UniqueBackup1=0
+UniqueBackup2=0
+UniqueBackup3=0
+UniqueBackup4=0
+UniqueBackup5=0
+UniqueBackup6=0
+UniqueBackup7=0
+UniqueBackup8=0
+UniqueBackup9=0
+UniqueBackup10=0
+UniqueBackup11=0
+UniqueBackup12=0
+UniqueBackup13=0
+UniqueBackup14=0
+UniqueBackup15=0
+UniqueBackup16=0
+UniqueBackup17=0
+UniqueBackup18=0
+NotChangeCar=1
+NotChangeFaHuo=0
+NotChangeShouHuo=0
+NotChangeGoods=0
+NotChangeSpec=0
+NotChangeBundle=0
+NotChangePrice=0
+NotChangeScale=0
+NotChangeMemo=0
+NotChangeBackup1=0
+NotChangeBackup2=0
+NotChangeBackup3=0
+NotChangeBackup4=0
+NotChangeBackup5=0
+NotChangeBackup6=0
+NotChangeBackup7=0
+NotChangeBackup8=0
+NotChangeBackup9=0
+NotChangeBackup10=0
+NotChangeBackup11=0
+NotChangeBackup12=0
+NotChangeBackup13=0
+NotChangeBackup14=0
+NotChangeBackup15=0
+NotChangeBackup16=0
+NotChangeBackup17=0
+NotChangeBackup18=0
 [position]
 cb00=车号
 cb01=发货单位
