--- a/weight/video.ini
+++ b/weight/video.ini
@@ -8,3 +8,58 @@ Line5='  Width = 370'
 Line6='end'
 [video]
 form_type=5
+type=1
+display_type=3
+use1=1
+use2=1
+use3=0
+use4=0
+video1=0
+video2=0
+video3=2
+video4=3
+ip=192.168.1.64
+port=8000
+user=admin
+pass=MTIzNDU=
+showDate=0
+showTime=0
+showLogo=0
+dateX=10
+dateY=10
+timeX=135
+timeY=10
+logoX=10
+logoY=30
+logo=
+type1=0
+ip1=180.95.166.75
+port1=8001
+user1=admin
+pass1=YWRtaW4xMjM0NQ==
+type2=0
+ip2=180.95.166.75
+port2=8002
+user2=admin
+pass2=YWRtaW4xMjM0NQ==
+type3=0
+ip3=192.168.1.102
+port3=8000
+user3=admin
+pass3=MTIzNDU=
+type4=0
+ip4=192.168.1.103
+port4=8000
+user4=admin
+pass4=MTIzNDU=
+use_record=0
+record_addr=D:\Record\
+use_pic_text=0
+show_car=0
+show_faHuo=0
+show_shouHuo=0
+show_goods=0
+show_spec=0
+show_gross=0
+show_tare=0
+show_net=0
