--- a/weight/setup.ini
+++ b/weight/setup.ini
@@ -1,18 +1,18 @@
 [system_set]
 add_print_form=1
 weight_type=0
-weight_mode=2
+weight_mode=0
 auto_mode=0
-record_time=0
+record_time=1
 record_type=2
 show_meter2=0
 previewTicket=1
 staticReportTitle=统计报表
 report_index=0
-poTicketFormat=Ticket\双盛粮食.fr3
-soTicketFormat=Ticket\双盛粮食.fr3
-ioTicketFormat=Ticket\双盛粮食.fr3
-ooTicketFormat=Ticket\双盛粮食.fr3
+poTicketFormat=Ticket\厦门大华(标准填充).fr3
+soTicketFormat=Ticket\厦门大华(标准填充).fr3
+ioTicketFormat=Ticket\厦门大华(标准填充).fr3
+ooTicketFormat=Ticket\厦门大华(标准填充).fr3
 company=
 tel=
 printer1=Default
@@ -94,7 +94,7 @@ print_net=0
 complete_hint=取重完成请下称
 car_out_hint=车辆已下秤
 pic_count=2000
-pic_path=F:\FZATW\标准版称重软件\weight2015.3\weight\WeightImg\
+pic_path=D:\FZATW\标准版称重软件\weight2015.3\weight\WeightImg\
 simple_mode=0
 auto_refresh_interval=60
 disconnect_check_count=10
@@ -105,8 +105,8 @@ even_color=-16777201
 grid_odd_even_color=0
 day_start=00:00:00
 autoRun=0
-export_XML=0
-XML_type=0
+export_XML=1
+XML_type=1
 save_by_steady=0
 save_interval=5
 save_quantity=10000
@@ -116,9 +116,9 @@ lower_limit=10
 ticket_sel_height=25
 sum_type=1
 pay_type=0
-auto_login=0
-login_name=
-login_pass=eJwDAAAAAAE=
+auto_login=1
+login_name=管理员
+login_pass=eJwzNDIGAAEtAJc=
 not_allow_tare_exceed=0
 compare_last=1
 [static]
@@ -127,3 +127,6 @@ topCount=10
 sum=1
 queue=1
 chartType=0
+[db]
+addr=E:\FZATW\标准版称重软件\weight2015.3\weight\\Database\Database.mdb
+default=1
